# cpp-maglev

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  MaglevConfig.cmake.in  README.md  fmt.sh  run_test.sh
.github/workflows/: cmake.yml
include/maglev/: maglev.h
include/maglev/hasher/: maglev_balancer.h  maglev_hasher.h  slot_array.h
include/maglev/node/: node_base.h  server_node_base.h  slot_counted_node_base.h  slot_counted_node_wrapper.h  weighted_node_base.h  weighted_node_wrapper.h
include/maglev/node_group/: node_group_base.h  weighted_node_group_base.h  weighted_node_group_wrapper.h
include/maglev/node_manager/: node_manager_base.h  weighted_node_manager_wrapper.h
include/maglev/permutation/: permutation_generator.h
include/maglev/stats/: atomic_counter.h  cycle_array.h  load_stats.h  load_stats_wrapper.h  node_stats_wrapper.h  sliding_window.h
include/maglev/util/: hash.h  prime.h  to_str.h  type_traits.h
include/maglev/wrapper/: extra_wrapper.h
test/install_test/: CMakeLists.txt  main.cpp
test/installation_test/: CMakeLists.txt  main.cpp
test/performance_test/: CMakeLists.txt  balance_test.cpp  maglev_balancer_test.cpp  maglev_hasher_test.cpp  performance_test.cpp  performance_test.h
test/unit_test/: CMakeLists.txt  hasher_test.cpp  load_stats_wrapper_test.cpp  node_manager_test.cpp  node_stats_wrapper_test.cpp  node_test.cpp  permutation_test.cpp  stats_test.cpp  unit_test.cpp  unit_test.h  util_test.cpp  wraper_test.cpp  wrapper_test.cpp
